--- a/Chalkable.BackgroundTaskProducer/app.config
+++ b/Chalkable.BackgroundTaskProducer/app.config
@@ -18,7 +18,8 @@
     <add name="ChalkableSchoolTemplate" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!"/>
     <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID=chalkableadmin;Pwd=Hellowebapps1!"/>
   </connectionStrings>
-  <ChalkableConfiguration SchoolTemplateDataBase="ChalkableSchoolTemplate" SchoolDbUser="chalkableadmin" SchoolDbPassword="Hellowebapps1!" EmptySchoolsReserved="10">
+  <ChalkableConfiguration SchoolTemplateDataBase="ChalkableSchoolTemplate" SchoolDbUser="chalkableadmin" SchoolDbPassword="Hellowebapps1!" EmptySchoolsReserved="10"
+                          DemoSchoolsReserved="20">
     <Servers>
       <add key="DbServer1" value="wcc87p1bed.database.windows.net" />
     </Servers>
