--- a/Chalkable.Web/Web.config
+++ b/Chalkable.Web/Web.config
@@ -50,7 +50,8 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
-  <ChalkableConfiguration SchoolTemplateDataBase="ChalkableSchoolTemplate" SchoolDbUser="chalkableadmin" SchoolDbPassword="Hellowebapps1!" EmptySchoolsReserved="10">
+  <ChalkableConfiguration SchoolTemplateDataBase="ChalkableSchoolTemplate" SchoolDbUser="chalkableadmin" SchoolDbPassword="Hellowebapps1!" EmptySchoolsReserved="10"
+                          DemoSchoolsReserved="20">
     <Servers>
       <add key="DbServer1" value="wcc87p1bed.database.windows.net" />
     </Servers>
