--- a/Chalkable.Web/Chalkable.Web.csproj
+++ b/Chalkable.Web/Chalkable.Web.csproj
@@ -252,6 +252,7 @@
     <Compile Include="Models\PersonViewDatas\ParentViewData.cs" />
     <Compile Include="Models\PersonViewDatas\PersonAppsViewData.cs" />
     <Compile Include="Models\PersonViewDatas\PersonInfoViewData.cs" />
+    <Compile Include="Models\PersonViewDatas\PersonScheduleViewData.cs" />
     <Compile Include="Models\PersonViewDatas\PersonViewData.cs" />
     <Compile Include="Models\PersonViewDatas\PersonSummaryViewData.cs" />
     <Compile Include="Models\PersonViewDatas\ShortPersonViewData.cs" />
