--- a/Chalkable.BackgroundTaskProcessor/app.config
+++ b/Chalkable.BackgroundTaskProcessor/app.config
@@ -7,7 +7,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.0.0" newVersion="5.2.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.5.0.0" newVersion="5.5.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -27,7 +27,7 @@
     <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID=chalkableadmin;Pwd=Hellowebapps1!"/>
   </connectionStrings>
   <ChalkableConfiguration SchoolTemplateDataBase="ChalkableSchoolTemplate" SchoolDbUser="chalkableadmin" SchoolDbPassword="Hellowebapps1!" EmptySchoolsReserved="10"
-                          DemoSchoolsReserved="20">
+                          DemoSchoolsReserved="20" TaskProcessorDelay="-1">
     <Servers>
       <add key="DbServer1" value="wcc87p1bed.database.windows.net" />
     </Servers>
