added authentication timeout

--- a/Chalkable.Web/Web.config
+++ b/Chalkable.Web/Web.config
@@ -37,6 +37,9 @@
     </pages>
     <membership defaultProvider="ChalkableMembershipProvider" userIsOnlineTimeWindow="15"></membership>
     <customErrors mode="Off"></customErrors>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/LogOn" timeout="2880" />
+    </authentication>
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
