fix in BaseApplicationViewData added Register to DeveloperController

--- a/Chalkable.Web/Chalkable.Web.csproj
+++ b/Chalkable.Web/Chalkable.Web.csproj
@@ -204,6 +204,7 @@
     <Compile Include="Models\AnnouncementsViewData\AnnouncementShortViewData.cs" />
     <Compile Include="Models\AnnouncementTypeViewData.cs" />
     <Compile Include="Models\AnnouncementsViewData\AnnouncementViewData.cs" />
+    <Compile Include="Models\ApplicationsViewData\ApplicationAccessViewData.cs" />
     <Compile Include="Models\ApplicationsViewData\ApplicationPersmissionsViewData.cs" />
     <Compile Include="Models\ApplicationsViewData\ApplicationPriceViewData.cs" />
     <Compile Include="Models\ApplicationsViewData\ApplicationRatingViewData.cs" />
