added Read and ApplicationInstalls to AppMarketController fix  GetApplications in ApplicationService

--- a/Chalkable.Web/Chalkable.Web.csproj
+++ b/Chalkable.Web/Chalkable.Web.csproj
@@ -190,6 +190,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="HtmlExtensions.cs" />
+    <Compile Include="Logic\ApplicationLogic.cs" />
     <Compile Include="Logic\AttachmentLogic.cs" />
     <Compile Include="Logic\ChalkableApiExplorerLogic.cs" />
     <Compile Include="Logic\ClassLogic.cs" />
