--- a/Chalkable.Tests/Chalkable.Tests.csproj
+++ b/Chalkable.Tests/Chalkable.Tests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Services\Master\ApplicationServiceTest.cs" />
     <Compile Include="Services\Master\BackgrounTaskServiceTest.cs" />
     <Compile Include="Services\Master\BaseMasterServiceLocatorTest.cs" />
+    <Compile Include="Services\Master\CategoryServiceTest.cs" />
     <Compile Include="Services\Master\DepartmentServiceTest.cs" />
     <Compile Include="Services\Master\DeveloperSchoolTestContex.cs" />
     <Compile Include="Services\Master\EmailTestService.cs" />
