--- a/Chalkable.Data.Common/Chalkable.Data.Common.csproj
+++ b/Chalkable.Data.Common/Chalkable.Data.Common.csproj
@@ -71,7 +71,7 @@
     <Compile Include="DataEntittyAttr.cs" />
     <Compile Include="Enums\ApplicationPermissionType.cs" />
     <Compile Include="Enums\ImportSystemType.cs" />
-    <Compile Include="Orm.cs" />
+    <Compile Include="Orm\Orm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\SqlAzure.ImportExport\Reference.cs">
       <AutoGen>True</AutoGen>
