--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Services\Master\ChalkableDepartmentService.cs" />
     <Compile Include="Services\Master\EmailService.cs" />
     <Compile Include="Services\Master\FundService.cs" />
+    <Compile Include="Services\Master\PictureServices\ApplicationPictureService.cs" />
     <Compile Include="Services\Master\PictureServices\CourseIconService.cs" />
     <Compile Include="Services\Master\PictureServices\DepartmentIconService.cs" />
     <Compile Include="Services\Master\PictureServices\FundRequestPictureService.cs" />
