fixed grade level saving

--- a/Chalkable.Web/Web.config
+++ b/Chalkable.Web/Web.config
@@ -13,6 +13,20 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <add key="WindowsAzure.OAuth.SwtSigningKey" value="/C4mMnNlyqjKQgE5uimJM/jjLQ6M14BEcCRMHvaXzo4=" />
+    <add key="WindowsAzure.OAuth.RelyingPartyName" value="https://localhost/chalkable" />
+    <add key="WindowsAzure.OAuth.RelyingPartyRealm" value="https://localhost/chalkable/" />
+    <add key="WindowsAzure.OAuth.ServiceNamespace" value="chalkable-local-access-control" />
+    <add key="WindowsAzure.OAuth.ServiceNamespaceManagementUserName" value="ManagementClient" />
+    <add key="WindowsAzure.OAuth.ServiceNamespaceManagementUserKey" value="JBWJoVgOgUP0pdPqxrdKO+OqRGyQ2gb2GdN8POvMgRA=" />
+    
+    <add key="api.explorer.client-id" value="https://localhost/chalkable" />
+    <add key="api.explorer.secret" value="Qwerty1@" />
+    <add key="api.explorer.redirecturi" value="https://localhost/chalkable" />
+    <add key="api.explorer.client-name" value="api explorer" />
+    <add key="api.explorer.scope" value="https://localhost/chalkable/" />
+    
   </appSettings>
   <connectionStrings>
     <add name="ChalkableMaster" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!" />
