--- a/Chalkable.Web/Chalkable.Web.csproj
+++ b/Chalkable.Web/Chalkable.Web.csproj
@@ -139,6 +139,8 @@
     <Compile Include="Authentication\ChalkableAuthentication.cs" />
     <Compile Include="Authentication\ChalkableIdentity.cs" />
     <Compile Include="Authentication\ChalkablePrincipal.cs" />
+    <Compile Include="Common\UrlFormats.cs" />
+    <Compile Include="Common\ViewConstants.cs" />
     <Compile Include="Controllers\AnnouncementAttachmentController.cs" />
     <Compile Include="Controllers\ApplicationController.cs" />
     <Compile Include="Controllers\AppMarketController.cs" />
@@ -186,6 +188,7 @@
     <Compile Include="Controllers\StorageMonitorController.cs" />
     <Compile Include="Controllers\PersonControllers\PersonController.cs" />
     <Compile Include="Extensions\StaticContentExtenstion.cs" />
+    <Compile Include="Extensions\ViewDataExtension.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
