added developer docs page

--- a/Chalkable.Web/Chalkable.Web.csproj
+++ b/Chalkable.Web/Chalkable.Web.csproj
@@ -397,6 +397,9 @@
   <ItemGroup>
     <Content Include="Views\DemoSchool\Index.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Developer\Info.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
