--- a/Chalkable.Web/Chalkable.Web.csproj
+++ b/Chalkable.Web/Chalkable.Web.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Controllers\SearchController.cs" />
     <Compile Include="Controllers\StorageMonitorController.cs" />
     <Compile Include="Controllers\PersonControllers\PersonController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Extensions\StaticContentExtenstion.cs" />
     <Compile Include="Extensions\ViewDataExtension.cs" />
     <Compile Include="Global.asax.cs">
@@ -390,9 +391,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Developer\SignUp.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\DemoSchool\Demo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\DemoSchool\Index.cshtml" />
