Implemented start demo school.

--- a/Chalkable.Common/Chalkable.Common.csproj
+++ b/Chalkable.Common/Chalkable.Common.csproj
@@ -78,6 +78,7 @@
     <EmbeddedResource Include="ChlkResources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>ChlkResources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
