--- a/Chalkable.Web/Chalkable.Web.csproj
+++ b/Chalkable.Web/Chalkable.Web.csproj
@@ -259,8 +259,10 @@
     <Compile Include="Models\DailyAttendanceViewData.cs" />
     <Compile Include="Models\DepartmentGradingStatViewData.cs" />
     <Compile Include="Models\DeveloperViewData.cs" />
-    <Compile Include="Models\DisciplineTypeViewData.cs" />
-    <Compile Include="Models\DisciplineView.cs" />
+    <Compile Include="Models\DisciplinesViewData\DisciplineInputModel.cs" />
+    <Compile Include="Models\DisciplinesViewData\DisciplineTypeViewData.cs" />
+    <Compile Include="Models\DisciplinesViewData\DisciplineView.cs" />
+    <Compile Include="Models\DisciplinesViewData\StudentDisciplineSummaryViewData.cs" />
     <Compile Include="Models\DistrictViewData.cs" />
     <Compile Include="Models\FinalGradesViewData\FinalGradeAnnouncementTypeViewData.cs" />
     <Compile Include="Models\FinalGradesViewData\FinalGradeAnnTypeGradeStatsViewData.cs" />
