--- a/Chalkable.Web/packages.config
+++ b/Chalkable.Web/packages.config
@@ -9,6 +9,7 @@
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.5.0" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.5.0" targetFramework="net45" />
+  <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net45" />
