fixed staging and release configs

--- a/Chalkable.Web/Web.Release.config
+++ b/Chalkable.Web/Web.Release.config
@@ -3,17 +3,21 @@
 <!-- For more information on using Web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <!--
-    In the example below, the "SetAttributes" transform will change the value of 
-    "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
-    finds an atrribute "name" that has a value of "MyDB".
-    
-    <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
-  -->
+  <appSettings>
+    <add key="WindowsAzure.OAuth.SwtSigningKey" value="6ielVZXrxXB3ZrU/4om5/HM5a7GGniMmMriAevxxyQw=" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="WindowsAzure.OAuth.RelyingPartyName" value="chalkable.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="WindowsAzure.OAuth.RelyingPartyRealm" value="https://chalkable.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="WindowsAzure.OAuth.ServiceNamespace" value="chalkable-access-control" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="WindowsAzure.OAuth.ServiceNamespaceManagementUserName" value="ManagementClient" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="WindowsAzure.OAuth.ServiceNamespaceManagementUserKey" value="j3OCyBJiVl0AXklP/jAAaHQsDHaL7ARTeBROVWe6nL4=" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="api.explorer.client-id" value="https://chalkable.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="api.explorer.secret" value="Qwerty1@" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="api.explorer.redirecturi" value="https://chalkable.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="api.explorer.client-name" value="api explorer" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="api.explorer.scope" value="https://chalkable.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <!--<add key="mixpanel-token" value="2f0bfa09aa5390f4aa43c423b1f080f9" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>-->
+
+  </appSettings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
