--- a/Chalkable.Web/Web.staging.config
+++ b/Chalkable.Web/Web.staging.config
@@ -3,17 +3,19 @@
 <!-- For more information on using Web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <!--
-    In the example below, the "SetAttributes" transform will change the value of 
-    "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
-    finds an atrribute "name" that has a value of "MyDB".
-    
-    <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
-  -->
+  <appSettings>
+		<add key="WindowsAzure.OAuth.SwtSigningKey" value="s6L1PpCuOrYHg93h+zszvnbFDSKPIFwwMmWGbfxLc0U=" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+		<add key="WindowsAzure.OAuth.RelyingPartyName" value="dev.chalkable.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+		<add key="WindowsAzure.OAuth.RelyingPartyRealm" value="https://dev.chalkable.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+		<add key="WindowsAzure.OAuth.ServiceNamespace" value="chalkable-dev-access-control" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+		<add key="WindowsAzure.OAuth.ServiceNamespaceManagementUserName" value="ManagementClient" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+		<add key="WindowsAzure.OAuth.ServiceNamespaceManagementUserKey" value="5e4ner6DWKJqPblD+rrit2FblrM5cAdasvA8XAFu630=" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+		<add key="api.explorer.client-id" value="https://dev.chalkable.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+		<add key="api.explorer.secret" value="Qwerty1@" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+		<add key="api.explorer.redirecturi" value="https://dev.chalkable.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+		<add key="api.explorer.client-name" value="api explorer" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+		<add key="api.explorer.scope" value="https://dev.chalkable.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+	</appSettings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
