--- a/Chalkable.Web/Chalkable.Web.csproj
+++ b/Chalkable.Web/Chalkable.Web.csproj
@@ -333,6 +333,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Content Include="app\api\chlk-post-message-api.js" />
     <Content Include="Global.asax" />
     <Content Include="loaderio-f0d51fdd912a285e8c3b581c292489c8.html" />
     <Content Include="Web.config">
@@ -434,6 +435,7 @@
   <ItemGroup>
     <None Include="Web.staging.config">
       <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
     </None>
   </ItemGroup>
   <PropertyGroup>
