--- a/Chalkable.BackgroundTaskProducer/Chalkable.BackgroundTaskProducer.csproj
+++ b/Chalkable.BackgroundTaskProducer/Chalkable.BackgroundTaskProducer.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Producers\CreateDemoSchoolTaskProducer.cs" />
     <Compile Include="Producers\DemoSchoolDeleteTaskProducer.cs" />
     <Compile Include="Producers\EmptySchoolTaskProducer.cs" />
+    <Compile Include="Producers\ProcessReminderProducer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Producers\TaskProducer.cs" />
     <Compile Include="WorkerRole.cs" />
